--- a/launcher-config.json
+++ b/launcher-config.json
@@ -5,27 +5,27 @@
       "git cz"
     ],
     "branch:$name": [
-      "git pull --rebase origin master",
+      "git pull --rebase origin main",
       "git checkout -b $name",
       "git branch"
     ],
     "develop": [
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git checkout -b develop",
       "git branch"
     ],
     "sync": [
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master"
+      "git rebase main"
     ],    
     "feature:$name": [
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "git branch feature/$name develop",
       "git switch feature/$name",
       "git branch"
@@ -42,10 +42,10 @@
     ],
     "mr-featrue$name": [
       "git fetch -p origin",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "git switch feature/$name",
       "git rebase develop",
       "gh pr create -f ",      
@@ -56,16 +56,16 @@
       "git switch develop",
       "git add -A",
       "git cz --allow-empty",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "git push -o merge_request.create -o merge_request.remove_source_branch origin $(git branch --show-current)"
     ],
     "hotfix:$name": [
-      "git switch master",
-      "git pull --rebase origin master",
-      "git branch hotfix/$name master",
+      "git switch main",
+      "git pull --rebase origin main",
+      "git branch hotfix/$name main",
       "git switch hotfix/$name",
       "git branch"
     ],
@@ -74,26 +74,26 @@
       "git switch hotfix/$name",
       "git add -A",
       "git cz --allow-empty",
-      "git rebase master",
+      "git rebase main",
       "mr-hotfix:$name"
     ],
     "mr-hotfix$name": [
       "git fetch -p origin",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch hotfix/$name",
-      "git rebase master",
+      "git rebase main",
       "git push -o merge_request.create -o merge_request.remove_source_branch origin $(git branch --show-current)",
-      "git switch master",
+      "git switch main",
       "git branch"
     ],
     "verify": [
       "git add -A",
       "git cz --allow-empty",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "git push -f origin $(git branch --show-current)"
     ],
     "vf:$name": [
@@ -102,10 +102,10 @@
     "verify-feature$name": [
       "git add -A",
       "git cz --allow-empty",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "git switch feature/$name",
       "git rebase develop",
       "git push -f origin $(git branch --show-current)"
@@ -116,10 +116,10 @@
     "verify-hotfix": [
       "git add -A",
       "git cz --allow-empty",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch hotfix/$name",
-      "git rebase master",
+      "git rebase main",
       "git push -f origin $(git branch --show-current)"
     ],
     "major": [
@@ -133,10 +133,10 @@
     ],
     "version:$revision": [
       "git fetch -p origin",
-      "git switch master",
-      "git pull --rebase origin master",
+      "git switch main",
+      "git pull --rebase origin main",
       "git switch develop",
-      "git rebase master",
+      "git rebase main",
       "npm version $revision",
       "git push -f -o merge_request.create -o merge_request.remove_source_branch origin $(git branch --show-current) --follow-tags"
     ]
