--- a/launcher-config.json
+++ b/launcher-config.json
@@ -74,7 +74,9 @@
     ],
     "dh:$name": "delete-hotfix:$name",
     "delete-hotfix:$name": [
+      "git fetch -p origin",
       "git switch main",
+      "git pull --rebase origin main",
       "git branch -d hotfix/$name",
       "git branch"
     ],
