--- a/launcher-config.json
+++ b/launcher-config.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
+    "hello:$name:$date": [
+      "echo hello $name at $date"
+    ],
     "cz": [
       "git add -A",
       "git cz"
