feat: add git branch to vverify (#7)
Co-authored-by: Sake <pan.ziqiang@holytiny.com>

--- a/launcher-config.json
+++ b/launcher-config.json
@@ -82,7 +82,8 @@
       "git switch feature/$name",
       "git rebase main",
       "git pull --rebase origin feature/$name",
-      "git push origin $(git branch --show-current)"
+      "git push origin $(git branch --show-current)",
+      "git branch"
     ],
     "vh:$name": [
       "verify-hotfix:$name"
