--- a/launcher-config.json
+++ b/launcher-config.json
@@ -54,48 +54,46 @@
       "sync",
       "git branch -D feature/$name",
       "git branch"
-    ],    
+    ],
     "hotfix:$issue:$version": [
       "git switch main",
       "git pull --rebase origin main",
-      "git branch hotfix/$name main",
-      "git switch hotfix/$name",
-      "git branch"
-    ],
-    "dh:$name": "delete-hotfix:$name",
-    "delete-hotfix:$name": [
-      "git fetch -p origin",
-      "git switch main",
-      "git pull --rebase origin main",
-      "git branch -d hotfix/$name",
-      "git branch"
-    ],
-    "fh:$name": "finish-hotfix:$name",
-    "finish-hotfix:$name": [
-      "git switch hotfix/$name",
-      "git rebase main",
-      "mr-hotfix:$name"
-    ],
-    "mr-hotfix:$name": [
-      "git fetch -p origin",
-      "git switch main",
-      "git pull --rebase origin main",
-      "git switch hotfix/$name",
-      "git rebase main",
-      "gh pr create -f --base main",
+      "git switch -c $issue $version",
       "git branch"
     ],
     "vh:$name": [
       "verify-hotfix:$name"
     ],
     "verify-hotfix:$name": [
-      "git add -A",
-      "git cz --allow-empty",
-      "git switch main",
-      "git pull --rebase origin main",
       "git switch hotfix/$name",
-      "git rebase main",
-      "git push -f origin $(git branch --show-current)"
+      "git pull --rebase origin hotfix/$name",
+      "git push origin $(git branch --show-current)",
+      "git branch"
+    ],
+    "fh:$name": "finish-hotfix:$name",
+    "finish-hotfix:$name": [
+      "sync",
+      "git switch hotfix/$name",
+      "mr-hotfix:$name"
+    ],
+    "mr-hotfix:$name": [
+      "sync",
+      "git switch hotfix/$name",
+      "gh pr create -f --base main",
+      "git branch"
+    ],
+    "dh:$name": "delete-hotfix:$name",
+    "delete-hotfix:$name": [
+      "sync",
+      "git merge hotfix/$name",
+      "git push",
+      "git switch hotfix/$name",
+      "npm version patch",
+      "git switch main",
+      "git merge hotfix/$name",
+      "git push",
+      "git branch -d hotfix/$name",      
+      "git branch"
     ],
     "premajor": "version:premajor",
     "major": "version:major",
